Unify shell execution and autocomplete
